k8s/dept.yml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: static-deployment
#   namespace: static-app-ns
# spec:
#   selector:
#     matchLabels:
#       app: static-dept
#   replicas: 2 # tells deployment to run 2 pods matching the template
#   strategy:
#     rollingUpdate:
#       maxSurge: 25%
#       maxUnavailable: 25%
#   template:
#     metadata:
#       labels:
#         app: static-dept
#     spec:
#       containers:
#       - name: static-image
#         image: 101275806917.dkr.ecr.ap-northeast-1.amazonaws.com/static_application:number
#         resources:
#           requests:
#             memory: "128Mi"
#             cpu: 100m
#           limits:
#             memory: "256Mi"
#             cpu: 1
#         ports:
#         - containerPort: 80
#       affinity:
#         nodeAffinity:
#           preferredDuringSchedulingIgnoredDuringExecution:
#           - weight: 1
#             preference:
#               matchExpressions:
#               - key: zone
#                 operator: In
#                 values:
#                 - ap-northeast-1a


apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
  namespace: static-app-ns
spec:
  selector:
    matchLabels:
      app: static-dept
  replicas: 2 # tells deployment to run 2 pods matching the template
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: static-dept
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - ap-northeast-1a
      containers:
      - name: static-image
        image: 101275806917.dkr.ecr.ap-northeast-1.amazonaws.com/static_application:number
        resources:
          requests:
            memory: "128Mi"
            cpu: 100m
          limits:
            memory: "256Mi"
            cpu: 1
        ports:
          - containerPort: 80
