k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: static-svc
  namespace: static-app-ns
spec:
  selector:
    app: static-dept
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
